--- a/app/src/main/res/layout/listview.xml
+++ b/app/src/main/res/layout/listview.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tvTeamA"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btnTeamA"
+        android:text="@string/teamA"
         android:textAlignment="center"
         android:textColor="@color/blue"
         android:textSize="20sp"
@@ -24,7 +24,7 @@
         android:id="@+id/tvTeamB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/btnTeamB"
+        android:text="@string/teamB"
         android:textAlignment="center"
         android:textColor="@color/red"
         android:textSize="20sp"
