--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -11,9 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="46dp"
-        android:layout_marginBottom="365dp"
         android:hint="Anzahl Runden"
-        app:layout_constraintBottom_toTopOf="@+id/btnB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,8 +20,8 @@
         android:id="@+id/tvData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="73dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="53dp"
         android:hint="Daten..."
         app:layout_constraintStart_toStartOf="@+id/tvRunden"
         app:layout_constraintTop_toBottomOf="@+id/tvRunden" />
@@ -33,20 +31,23 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="9dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="@color/blue"
         android:text="@string/teamA"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnB"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNameA" />
+        app:layout_constraintTop_toBottomOf="@+id/btnRepeat" />
 
     <Button
         android:id="@+id/btnB"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/red"
@@ -55,41 +56,37 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnA"
-        app:layout_constraintTop_toBottomOf="@+id/tvRunden" />
+        app:layout_constraintTop_toBottomOf="@+id/btnRepeat" />
 
     <Button
         android:id="@+id/btnRepeat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="311dp"
-        android:layout_marginBottom="71dp"
+        android:layout_marginBottom="210dp"
         android:text="@string/btnRepeat"
-        app:layout_constraintBottom_toTopOf="@+id/btnA"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tvNameA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="91dp"
-        android:layout_marginBottom="320dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="34dp"
         android:hint="@string/teamA"
-        app:layout_constraintBottom_toTopOf="@+id/btnA"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/fabBack"
+        app:layout_constraintTop_toBottomOf="@+id/fabBack" />
 
     <TextView
         android:id="@+id/tvNameB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="21dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginEnd="64dp"
         android:hint="@string/teamB"
-        app:layout_constraintStart_toEndOf="@+id/tvRunden"
-        app:layout_constraintTop_toBottomOf="@+id/tvRunden" />
+        app:layout_constraintBottom_toBottomOf="@+id/tvNameA"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvNameA" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabBack"
@@ -101,6 +98,72 @@
         android:src="@drawable/baseline_arrow_back_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="SpeakableTextPresentCheck"/>
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <ImageView
+        android:id="@+id/iv1"
+        android:layout_width="187dp"
+        android:layout_height="193dp"
+        android:layout_marginTop="83dp"
+        android:layout_marginBottom="79dp"
+        android:src="@drawable/eins"
+        app:layout_constraintBottom_toTopOf="@+id/btnRepeat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvData" />
+
+    <ImageView
+        android:id="@+id/iv2"
+        android:layout_width="187dp"
+        android:layout_height="193dp"
+        android:layout_marginTop="83dp"
+        android:layout_marginBottom="79dp"
+        android:src="@drawable/zwei"
+        app:layout_constraintBottom_toTopOf="@+id/btnRepeat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvData"/>
+
+    <ImageView
+        android:id="@+id/iv3"
+        android:layout_width="187dp"
+        android:layout_height="193dp"
+        android:layout_marginTop="83dp"
+        android:layout_marginBottom="79dp"
+        android:src="@drawable/drei"
+        app:layout_constraintBottom_toTopOf="@+id/btnRepeat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvData" />
+
+    <ImageView
+        android:id="@+id/iv4"
+        android:layout_width="187dp"
+        android:layout_height="193dp"
+        android:src="@drawable/vier"
+        app:layout_constraintBottom_toTopOf="@+id/btnRepeat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvData" />
+
+    <ImageView
+        android:id="@+id/iv5"
+        android:layout_width="187dp"
+        android:layout_height="193dp"
+        android:src="@drawable/fuenf"
+        app:layout_constraintBottom_toTopOf="@+id/btnRepeat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvData" />
+
+    <ImageView
+        android:id="@+id/iv6"
+        android:layout_width="187dp"
+        android:layout_height="193dp"
+        android:src="@drawable/sechs"
+        app:layout_constraintBottom_toTopOf="@+id/btnRepeat"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvData"  />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
