--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -15,16 +15,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button_second"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="46dp"
-        android:layout_marginEnd="71dp"
-        android:text="@string/previous"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ListView
         android:id="@+id/lvPlayer"
         android:layout_width="match_parent"
@@ -67,12 +57,12 @@
         android:id="@+id/fabAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="31dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="78dp"
+        android:layout_marginBottom="51dp"
         android:clickable="true"
         android:src="@drawable/baseline_add_24"
-        app:layout_constraintEnd_toEndOf="@+id/button_second"
-        app:layout_constraintTop_toBottomOf="@+id/button_second"
+        app:layout_constraintBottom_toTopOf="@+id/lvPlayer"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
