--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -9,13 +9,11 @@
 
     <TextView
         android:id="@+id/tvRunden"
+        style="@style/TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:hint="Runden..."
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,12 +21,12 @@
 
     <TextView
         android:id="@+id/tvData"
+        style="@style/TextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="184dp"
+        android:layout_marginTop="252dp"
         android:hint="Daten..."
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvRunden" />
 
@@ -36,10 +34,11 @@
         android:id="@+id/tvTeamA"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:hint="@string/teamA"
+        android:layout_marginTop="112dp"
+        android:text="@string/teamA"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textColor="@color/blue"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/tvTeamB"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,10 +48,11 @@
         android:id="@+id/tvTeamB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:hint="@string/teamB"
+        android:layout_marginTop="112dp"
+        android:text="@string/teamB"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textColor="@color/red"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tvTeamA"
@@ -62,80 +62,113 @@
         android:id="@+id/iv6"
         android:layout_width="321dp"
         android:layout_height="296dp"
+        android:layout_marginBottom="52dp"
         android:src="@drawable/sechs"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvData" />
+        app:layout_constraintTop_toBottomOf="@+id/tvData"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/iv2"
         android:layout_width="321dp"
         android:layout_height="296dp"
+        android:layout_marginBottom="52dp"
         android:src="@drawable/zwei"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvData" />
+        app:layout_constraintTop_toBottomOf="@+id/tvData"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/iv4"
         android:layout_width="321dp"
         android:layout_height="296dp"
+        android:layout_marginBottom="52dp"
         android:src="@drawable/vier"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvData" />
+        app:layout_constraintTop_toBottomOf="@+id/tvData"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/iv5"
         android:layout_width="321dp"
         android:layout_height="296dp"
+        android:layout_marginBottom="52dp"
         android:src="@drawable/fuenf"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvData" />
+        app:layout_constraintTop_toBottomOf="@+id/tvData"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/iv1"
         android:layout_width="321dp"
         android:layout_height="296dp"
+        android:layout_marginBottom="52dp"
         android:src="@drawable/eins"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvData" />
+        app:layout_constraintTop_toBottomOf="@+id/tvData"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
         android:id="@+id/iv3"
         android:layout_width="321dp"
         android:layout_height="296dp"
+        android:layout_marginBottom="52dp"
         android:src="@drawable/drei"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvData" />
+        app:layout_constraintTop_toBottomOf="@+id/tvData"
+        app:layout_constraintVertical_bias="1.0" />
+
 
     <TextView
-        android:id="@+id/tvNameA"
+        android:id="@+id/tvScoreA"
+        style="@style/TextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:hint="Name A"
-        app:layout_constraintEnd_toStartOf="@id/tvNameB"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="18dp"
+        android:textAlignment="center"
+        android:textColor="@color/blue"
+        android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTeamA" />
 
     <TextView
-        android:id="@+id/tvNameB"
+        android:id="@+id/tvScoreB"
+        style="@style/TextView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:hint="Name B"
+        android:layout_marginTop="18dp"
+        android:layout_marginEnd="112dp"
+        android:textAlignment="center"
+        android:textColor="@color/red"
+        android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tvNameA"
         app:layout_constraintTop_toBottomOf="@id/tvTeamB" />
+
+    <TextView
+        android:id="@+id/tvPoints"
+        style="@style/TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:text="@string/tvPoints"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvRunden" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
